--- a/admin/navbar/navbar.css
+++ b/admin/navbar/navbar.css
@@ -58,7 +58,7 @@ body {
 
 .menu-open {
     position: fixed;
-    background-color: darkblue;
+    background-color: rgba(16, 78, 178, 0.8);
     width: 30%;
     height: 50%;
     border-radius: 0px 0px 30px 0px;
@@ -85,6 +85,13 @@ li {
     margin-top: 10px;
     margin-left: 20px;
 }
+li:hover{
+    background: rgb(208, 209, 210);
+}
+li a:hover{
+    color: rgb(38, 144, 210);
+    background: rgb(208, 209, 210);
+}
 
 a.navbar {
     text-decoration: none;
@@ -108,4 +115,11 @@ a.navbar {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+}
+
+@media all and (max-width: 500px) {
+    .menu-open{
+        width: 50%;
+        background-color: rgb(16, 78, 178);
+    }
 }
