--- a/private/navbar/navbar.css
+++ b/private/navbar/navbar.css
@@ -44,22 +44,8 @@ body {
     margin: 0;
     margin-left: 3%;
     margin-top: 7px;
-    margin-bottom: 7px;   
+    margin-bottom: 7px;
 }
-.welcome-title {
-    line-height: 50px;
-    background: rgb(16, 78, 178);
-    padding-left: 0;
-    margin-right: 120px;
-    text-align: center;
-    width: 100%;
-    border-radius: 5px 5px 0 0;
-    color: white;
-    font-size: 35px;
-    font-weight: 600;
-    
-
- }
 
 .menu-button:hover {
     cursor: pointer;
@@ -72,7 +58,7 @@ body {
 
 .menu-open {
     position: fixed;
-    background-color: darkblue;
+    background-color: rgba(16, 78, 178, 0.8);
     width: 30%;
     height: 50%;
     border-radius: 0px 0px 30px 0px;
@@ -100,6 +86,15 @@ li {
     margin-left: 20px;
 }
 
+li:hover {
+    background: rgb(208, 209, 210);
+}
+
+li a:hover {
+    color: rgb(38, 144, 210);
+    background: rgb(208, 209, 210);
+}
+
 a.navbar {
     text-decoration: none;
     color: white;
@@ -122,4 +117,11 @@ a.navbar {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+}
+
+@media all and (max-width: 500px) {
+    .menu-open {
+        width: 50%;
+        background-color: rgb(16, 78, 178);
+    }
 }
