--- a/ProjectManager/navbar/navbar.css
+++ b/ProjectManager/navbar/navbar.css
@@ -38,13 +38,13 @@ body {
     justify-content: center;
     align-items: center;
     background-color: white;
-    font-size: 20px;
     font-weight: 600;
+    font-size: 20px;
     width: 120px;
     margin: 0;
     margin-left: 3%;
     margin-top: 7px;
-    margin-bottom: 7px;   
+    margin-bottom: 7px;
 }
 
 .menu-button:hover {
@@ -58,7 +58,7 @@ body {
 
 .menu-open {
     position: fixed;
-    background-color: darkblue;
+    background-color: rgba(16, 78, 178, 0.8);
     width: 30%;
     height: 50%;
     border-radius: 0px 0px 30px 0px;
@@ -86,6 +86,15 @@ li {
     margin-left: 20px;
 }
 
+li:hover {
+    background: rgb(208, 209, 210);
+}
+
+li a:hover {
+    color: rgb(38, 144, 210);
+    background: rgb(208, 209, 210);
+}
+
 a.navbar {
     text-decoration: none;
     color: white;
@@ -108,4 +117,11 @@ a.navbar {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+}
+
+@media all and (max-width: 500px) {
+    .menu-open {
+        width: 50%;
+        background-color: rgb(16, 78, 178);
+    }
 }
