--- a/admin/navbar/navbar.css
+++ b/admin/navbar/navbar.css
@@ -44,8 +44,23 @@ body {
     margin: 0;
     margin-left: 3%;
     margin-top: 7px;
-    margin-bottom: 7px;   
-}
+    margin-bottom: 7px;
+    height: 36px;   
+}   
+.welcome-title {
+    line-height: 50px;
+    background: rgb(16, 78, 178);
+    padding-left: 0;
+    margin-right: 120px;
+    text-align: center;
+    width: 100%;
+    border-radius: 5px 5px 0 0;
+    color: white;
+    font-size: 35px;
+    font-weight: 600;
+    
+
+ }
 
 .menu-button:hover {
     cursor: pointer;
