--- a/private/navbar/navbar.css
+++ b/private/navbar/navbar.css
@@ -31,21 +31,10 @@ body {
     background-color: rgb(16, 78, 178);
     width: 100%;
     height: 50px;
+    display: flex;
+    align-items: center;
 }
 
-.menu-button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: white;
-    font-weight: 600;
-    font-size: 20px;
-    width: 120px;
-    margin: 0;
-    margin-left: 3%;
-    margin-top: 7px;
-    margin-bottom: 7px;   
-}
 .welcome-title {
     line-height: 50px;
     background: rgb(16, 78, 178);
@@ -60,6 +49,21 @@ body {
     
 
  }
+.menu-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    font-weight: 600;
+    font-size: 20px;
+    width: 120px;
+    margin: 0;
+    margin-left: 3%;
+    margin-top: 7px;
+    margin-bottom: 7px; 
+    height: 36px;  
+}
+
 
 .menu-button:hover {
     cursor: pointer;
