--- a/private/previous_timesheet/navbar/navbar.css
+++ b/private/previous_timesheet/navbar/navbar.css
@@ -42,10 +42,25 @@ body {
     font-weight: 600;
     width: 120px;
     margin: 0;
+    height: 36px;
     margin-left: 3%;
     margin-top: 7px;
     margin-bottom: 7px;   
 }
+.welcome-title {
+    line-height: 50px;
+    background: rgb(16, 78, 178);
+    padding-left: 0;
+    margin-right: 120px;
+    text-align: center;
+    width: 100%;
+    border-radius: 5px 5px 0 0;
+    color: white;
+    font-size: 35px;
+    font-weight: 600;
+    
+
+ }
 
 .menu-button:hover {
     cursor: pointer;
