--- a/private/userpage.css
+++ b/private/userpage.css
@@ -81,7 +81,7 @@ html {
     padding-left: 0;
     text-align: center;
     border-radius: 5px 5px 0 0;
-    color: whitesmoke;
+    color: white;
     font-size: 35px;
     font-weight: 600;
  }
