--- a/private/navbar/navbar.css
+++ b/private/navbar/navbar.css
@@ -34,6 +34,21 @@ body {
     display: flex;
     align-items: center;
 }
+.menu-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    font-weight: 600;
+    font-size: 20px;
+    width: 120px;
+    margin: 0;
+    margin-left: 3%;
+    margin-top: 7px;
+    margin-bottom: 7px;
+    height: 36px;   
+} 
+
 .welcome-title {
     line-height: 50px;
     background: rgb(16, 78, 178);
