--- a/ProjectManager/stylesheet.css
+++ b/ProjectManager/stylesheet.css
@@ -39,7 +39,7 @@ html {
      }
 
 /* her justere jeg knapperne i navigation bar*/
-#LinkUserToProjectkButton , #showProjectsButton, #CreateTaskButton {
+.WhiteButton {
     cursor: pointer;
     font-weight: 600;
     font-size: 20px;
@@ -60,16 +60,7 @@ html {
 }
 
 /* her justere jeg hovering over navbar og knapperne*/
-#LinkUserToProjectkButton:hover {
-    color: rgb(38, 144, 210);
-    background: rgb(208, 209, 210);
-}
-#showProjectsButton:hover {
-    color: rgb(38, 144, 210);
-    background: rgb(208, 209, 210);
-}
-
-#CreateTaskButton :hover {
+.WhiteButton:hover {
     color: rgb(38, 144, 210);
     background: rgb(208, 209, 210);
 }
