--- a/ProjectManager/stylesheet.css
+++ b/ProjectManager/stylesheet.css
@@ -70,7 +70,7 @@ html {
 }
 
 /* her justere jeg de forskellig former*/
-#LinkUserToProjectForm{
+form,#showProjects{
     font-size: 20px;
     font-weight: 400;
     border-radius: 10px;
@@ -79,24 +79,7 @@ html {
     padding:50px;
     background: rgb(238, 240, 230);
 }
-#createTaskForProject{
-    font-size: 20px;
-    font-weight: 400;
-    border-radius: 10px;
-    margin: 0 auto;
-    width: 80%;
-    padding: 50px;
-    background: rgb(238, 240, 230);
-}
-#showProjects{
-    font-size: 20px;
-    font-weight: 400;
-    border-radius: 10px;
-    margin: 0 auto;
-    width: 80%;
-    padding: 50px;
-    background: rgb(238, 240, 230);
-}
+
 #LinkUserToProjectContainer,#createTaskForProject, #showProjects { 
     text-align: center;
 }
